service2.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: helloworld
spec:
  runLatest:
    configuration:
      build:
        apiVersion: build.knative.dev/v1alpha1
        kind: Build
        metadata:
          annotations:
            trigger: "15"
        spec:
          serviceAccountName: build-bot
          source:
            git:
              revision: master
              url: https://github.com/${GITREPO}
          steps:
          - args:
            - --dockerfile=/workspace/Dockerfile
            - --destination=index.docker.io/${APP_IMAGE}
            image: gcr.io/kaniko-project/executor
            name: build-and-push
            resources: {}
      revisionTemplate:
        metadata:
          annotations:
            autoscaling.knative.dev/target: "1"
        spec:
          container:
            image: ${APP_IMAGE}
          containerConcurrency: 1
